tests/neg-macros/i14679.scala
import scala.quoted.*

object A {
  inline val a = ${b} // error

  def b(using Quotes): Expr[Unit] = '{ () }
}
